# fast-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  STATUS.md  docker-compose.yml  pyproject.toml
01-python-basics/: Makefile  README.md  pyproject.toml
01-python-basics/src/: _helpers.py  s01_types.py  s02_collections.py  s03_control_flow.py  s04_functions.py  s05_classes.py  s06_modules.py  s07_unpacking.py
01-python-basics/tests/: conftest.py  test_basics.py
02-package-structure/: Makefile  README.md  pyproject.toml
02-package-structure/src/greeter/: __init__.py  _internal.py  circular_demo.py  cli.py  core.py
02-package-structure/tests/: test_greeter.py
03-libraries-tour/: .env.example  Makefile  README.md  pyproject.toml
03-libraries-tour/src/libtour/: __init__.py  t01_pydantic.py  t02_httpx.py  t03_orjson.py  t04_jsonpath.py  t05_datetime.py  t06_logging.py  t07_dotenv.py
03-libraries-tour/tests/: test_tours.py
04-fastapi-hello/: .env.example  Makefile  README.md  pyproject.toml
04-fastapi-hello/src/app/: __init__.py  logging_setup.py  main.py  settings.py
04-fastapi-hello/tests/: conftest.py  test_app.py
06-async-deep/: Makefile  README.md  pyproject.toml
06-async-deep/src/asyncdeep/: __init__.py  t01_event_loop.py  t02_concurrent.py  t03_antipattern.py  t04_executor.py  t05_timeout_cancel.py  t06_async_iter.py  t07_fastapi_loadcompare.py
06-async-deep/tests/: test_async_deep.py
07-request-error-version/: Makefile  README.md  pyproject.toml
07-request-error-version/src/errver/: __init__.py  envelope.py  errors.py  handlers.py  main.py
07-request-error-version/tests/: conftest.py  test_app.py
08-testing/: Makefile  README.md  pyproject.toml
08-testing/src/testapp/: __init__.py  cache.py  main.py  repository.py  settings.py
08-testing/tests/: conftest.py  test_e2e.py  test_integration.py  test_unit.py
09-auth/: Makefile  README.md  pyproject.toml
09-auth/src/authapp/: __init__.py  deps.py  main.py  security.py  settings.py  users.py
09-auth/tests/: conftest.py  test_auth.py
10-db-transaction/: Makefile  README.md  alembic.ini  pyproject.toml
10-db-transaction/alembic/: env.py
10-db-transaction/alembic/versions/: 2026_04_29_0001_initial.py
10-db-transaction/src/dbapp/: __init__.py  database.py  main.py  models.py  repository.py  settings.py  uow.py
10-db-transaction/tests/: conftest.py  test_app.py  test_repository.py  test_transaction.py
11-redis-ratelimit/: Makefile  README.md  pyproject.toml
11-redis-ratelimit/src/cacheapp/: __init__.py  cache.py  lock.py  main.py  ratelimit.py  settings.py  token_blocklist.py
11-redis-ratelimit/tests/: conftest.py  test_app.py  test_cache.py  test_lock.py
12-service-comm-observability/: Makefile  README.md  pyproject.toml
12-service-comm-observability/src/obsapp/: __init__.py  correlation.py  http_client.py  main.py  observability.py  settings.py
12-service-comm-observability/tests/: conftest.py  test_correlation.py  test_metrics.py  test_resilient_client.py
13-kafka-queue/: Makefile  README.md  pyproject.toml
13-kafka-queue/src/mqapp/: __init__.py  arq_worker.py  kafka_consumer.py  kafka_producer.py  main.py  outbox.py  settings.py
13-kafka-queue/tests/: conftest.py  test_background_tasks.py  test_outbox.py
14-shared-package/: CHANGELOG.md  Makefile  README.md  pyproject.toml
14-shared-package/src/fastapi_common/: __init__.py  correlation.py  envelope.py  errors.py  handlers.py  http_client.py  logging_setup.py
14-shared-package/tests/: test_lib.py
15-mini-project/: Makefile  README.md  alembic.ini  pyproject.toml
15-mini-project/alembic/: env.py
15-mini-project/alembic/versions/: 2026_04_29_0001_initial.py
15-mini-project/src/tender/: __init__.py  auth.py  cache.py  errors.py  main.py  models.py  repository.py  schemas.py  settings.py  uow.py
15-mini-project/tests/: conftest.py  test_scenario.py
A1-i18n/: Makefile  README.md  pyproject.toml
A1-i18n/src/i18napp/: babel_setup.py  catalog.py  locale.py  main.py  middleware.py  pydantic_messages.py
A1-i18n/tests/: conftest.py  test_app.py  test_babel_setup.py  test_catalog.py  test_locale.py  test_pydantic_messages.py
A10-graphql/: Makefile  README.md  pyproject.toml
A10-graphql/src/gqlapi/: data.py  dataloader.py  main.py  schema.py
A10-graphql/tests/: conftest.py  test_app.py  test_dataloader.py  test_schema.py
A11-ddd/: Makefile  README.md  pyproject.toml
A11-ddd/tests/: conftest.py  test_api.py  test_order_aggregate.py  test_use_cases.py  test_value_objects.py
A12-observability/: Makefile  README.md  pyproject.toml
A12-observability/src/obsdeep/: alerting.py  dashboards.py  main.py  slo.py  (+4 more)
A12-observability/tests/: conftest.py  test_alerting.py  test_app.py  test_dashboards.py  test_logging_redaction.py  test_slo.py
A14-perf/: Makefile  README.md  pyproject.toml
A14-perf/tests/: test_algorithm_complexity.py  test_async_pitfalls.py  test_bench_utils.py  test_cache_bench.py  test_cprofile.py  test_tracemalloc.py
A2-load-test/: Makefile  README.md  pyproject.toml
A5-security/: Makefile  README.md  pyproject.toml
A5-security/tests/: conftest.py  test_security.py
A6-db-deep/: Makefile  README.md  pyproject.toml
A6-db-deep/alembic/: env.py
A6-db-deep/tests/: conftest.py  test_app.py  test_indexes.py  test_jsonb_fts.py  test_zero_downtime_migration.py
A7-cache-mq-deep/: Makefile  README.md  pyproject.toml
A7-cache-mq-deep/tests/: conftest.py  test_app.py  test_cqrs.py  test_dlq.py  test_event_sourcing.py  test_saga.py  test_schema_registry.py  test_stampede.py
A8-realtime/: Makefile  README.md  pyproject.toml
A8-realtime/tests/: conftest.py  test_manager.py  test_pubsub.py  test_sse.py  test_websocket_e2e.py
A9-file-io/: Makefile  README.md  pyproject.toml
A9-file-io/tests/: conftest.py  test_app.py  test_download.py  test_presigned.py  test_storage.py
templates/fastapi-best-practice/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
(+160 files in other folders)
