[project]
name = "fast-api-learning"
version = "0.1.0"
description = "FastAPI + Python 학습 커리큘럼 (uv workspace 루트)"
requires-python = ">=3.12"
readme = "README.md"

# 워크스페이스 멤버를 _실제로 설치_ 하려면 루트 dependency 로 등록 필요.
# 등록 안 하면 .venv 에 들어가지 않아 콘솔 스크립트(예: greeter) 가 PATH 에 없음.
dependencies = [
    "step-01-python-basics",
    "greeter",
    "libraries-tour",
    "fastapi-hello",
    "async-deep",
    "request-error-version",
    "testing-deep",
    "auth-app",
    "db-transaction",
    "redis-ratelimit",
    "service-comm-observability",
    "kafka-queue",
    "fastapi-common",
    "tender",
    "load-test",
    "security-deep",
    "db-deep",
    "cache-mq-deep",
    "realtime",
    "file-io",
    "gqlapi",
    "tender-domain",
    "obs-deep",
    "typing-deep",
    "perf-deep",
    "i18n-app",
]

# uv workspace 루트.
[tool.uv.workspace]
members = [
    "01-python-basics",
    "02-package-structure",
    "03-libraries-tour",
    "04-fastapi-hello",
    "06-async-deep",
    "07-request-error-version",
    "08-testing",
    "09-auth",
    "10-db-transaction",
    "11-redis-ratelimit",
    "12-service-comm-observability",
    "13-kafka-queue",
    "14-shared-package",
    "15-mini-project",
    "A2-load-test",
    "A5-security",
    "A6-db-deep",
    "A7-cache-mq-deep",
    "A8-realtime",
    "A9-file-io",
    "A10-graphql",
    "A11-ddd",
    "A12-observability",
    "A13-typing-deep",
    "A14-perf",
    "A1-i18n",
]

# 위 dependencies 가 _PyPI 가 아니라 워크스페이스_ 에서 온다고 명시.
[tool.uv.sources]
step-01-python-basics = { workspace = true }
greeter = { workspace = true }
libraries-tour = { workspace = true }
fastapi-hello = { workspace = true }
async-deep = { workspace = true }
request-error-version = { workspace = true }
testing-deep = { workspace = true }
auth-app = { workspace = true }
db-transaction = { workspace = true }
redis-ratelimit = { workspace = true }
service-comm-observability = { workspace = true }
kafka-queue = { workspace = true }
fastapi-common = { workspace = true }
tender = { workspace = true }
load-test = { workspace = true }
security-deep = { workspace = true }
db-deep = { workspace = true }
cache-mq-deep = { workspace = true }
realtime = { workspace = true }
file-io = { workspace = true }
gqlapi = { workspace = true }
tender-domain = { workspace = true }
obs-deep = { workspace = true }
typing-deep = { workspace = true }
perf-deep = { workspace = true }
i18n-app = { workspace = true }

# 워크스페이스 전체에서 공통으로 쓰는 개발 의존성
[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-python-dateutil>=2.9",
    "types-passlib>=1.7",
    "testcontainers[postgres,redis]>=4.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = ["E501"]  # line too long: line-length로만 제한

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true

# 타입 stub 제공 안 하는 외부 라이브러리들
[[tool.mypy.overrides]]
module = [
    "jsonpath_ng.*",
    "fastapi_limiter",
    "fastapi_limiter.*",
    "aiokafka",
    "aiokafka.*",
    "arq",
    "arq.*",
    "purgatory",
    "purgatory.*",
    "authlib.*",
    "jsonschema",
    "jsonschema.*",
    "aiofiles",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "01-python-basics/tests",
    "02-package-structure/tests",
    "03-libraries-tour/tests",
    "04-fastapi-hello/tests",
    "06-async-deep/tests",
    "07-request-error-version/tests",
    "08-testing/tests",
    "09-auth/tests",
    "10-db-transaction/tests",
    "11-redis-ratelimit/tests",
    "12-service-comm-observability/tests",
    "13-kafka-queue/tests",
    "14-shared-package/tests",
    "15-mini-project/tests",
    "A5-security/tests",
    "A6-db-deep/tests",
    "A7-cache-mq-deep/tests",
    "A8-realtime/tests",
    "A9-file-io/tests",
    "A10-graphql/tests",
    "A11-ddd/tests",
    "A12-observability/tests",
    "A13-typing-deep/tests",
    "A14-perf/tests",
    "A1-i18n/tests",
]
markers = [
    "integration: testcontainers 가 필요한 통합 테스트 (도커 데몬 없으면 스킵)",
    "e2e: 풀 스택 통합 테스트",
]
