[project]
name = "request-error-version"
version = "0.1.0"
description = "07 단계 — 요청·응답 envelope + 공통 에러 + API 버전 관리"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "structlog>=24.4",
    "httpx>=0.27",                # tests 에서 AsyncClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/errver"]
