[project]
name = "auth-app"
version = "0.1.0"
description = "09 단계 — 인증/인가 (JWT + OAuth2 password flow + RBAC)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyjwt>=2.10",                # JWT 인코딩/디코딩
    "passlib[bcrypt]>=1.7",       # 비밀번호 해싱 (bcrypt)
    "bcrypt<4.1",                 # passlib 호환을 위해 4.0.x 핀 (4.1 호환 이슈)
    "python-multipart>=0.0.18",   # OAuth2PasswordRequestForm 의 form 파싱
    "structlog>=24.4",
    "httpx>=0.27",                # tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/authapp"]
