[project]
name = "db-transaction"
version = "0.1.0"
description = "10 단계 — SQLAlchemy 2.0 async + Alembic + Unit of Work + 트랜잭션"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",                  # SQLAlchemy 가 추천하는 async Postgres 드라이버
    "psycopg[binary]>=3.2",           # Alembic 동기 마이그레이션용
    "structlog>=24.4",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbapp"]
