[project]
name = "redis-ratelimit"
version = "0.1.0"
description = "11 단계 — Redis 캐시 + 분산 락 + Rate Limit + JWT blocklist"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.0",                  # async client 포함 (redis.asyncio)
    "structlog>=24.4",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",          # tests 에서 lifespan 트리거 (httpx ASGITransport 가 안 함)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cacheapp"]
