[project]
name = "kafka-queue"
version = "0.1.0"
description = "13 단계 — Kafka(aiokafka) + 백그라운드 큐(arq) + transactional outbox"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "aiokafka>=0.12",                   # async Kafka client
    "arq>=0.26",                        # Redis 기반 async 작업 큐
    "redis>=5.0",
    "sqlalchemy[asyncio]>=2.0",         # outbox 테이블
    "asyncpg>=0.30",
    "structlog>=24.4",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",               # tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mqapp"]
