[project]
name = "fastapi-common"
version = "0.1.0"
description = "사내 공통 FastAPI 유틸 — envelope / errors / correlation-id / resilient http / logging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "FastAPI 학습자" }]

# _런타임_ 의존성 — 사용 측에 같이 install 됨. 최소화 원칙.
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "purgatory>=1.0",
]

# 옵션 — pyjwt 는 _인증 사용자만_ install. 09 패턴 활용.
[project.optional-dependencies]
auth = ["pyjwt>=2.10", "passlib[bcrypt]>=1.7", "bcrypt<4.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_common"]
