[project]
name = "i18n-app"
version = "0.1.0"
description = "A1 — 다국어 처리 (Accept-Language / gettext / Pydantic / Babel)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "babel>=2.16",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/i18napp"]
