[project]
name = "gqlapi"
version = "0.1.0"
description = "A10 — GraphQL (Strawberry) — Query / Mutation / DataLoader / N+1 회피"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "strawberry-graphql[fastapi]>=0.243",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gqlapi"]
