[project]
name = "tender-domain"
version = "0.1.0"
description = "A11 — DDD + 헥사고날 (Ports & Adapters). 15 tender 의 도메인 정련"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tenderdomain"]
