[project]
name = "perf-deep"
version = "0.1.0"
description = "A14 — 성능 / 프로파일링 (cProfile / tracemalloc / async pitfalls / CPU vs I/O / 캐시)"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perfdeep"]
