[project]
name = "load-test"
version = "0.1.0"
description = "A2 — 부하 테스트 (locust). tender 서비스 + sync vs async 비교"
requires-python = ">=3.12"
dependencies = [
    "locust>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loadtest"]
