[project]
name = "security-deep"
version = "0.1.0"
description = "A5 — 보안 심화 (TOTP / API key / OAuth 3rd party / OWASP / 시크릿 관리 가이드)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyotp>=2.9",                  # TOTP (RFC 6238)
    "authlib>=1.3",                # OAuth 2.0 client (Google/GitHub)
    "httpx>=0.27",
    "structlog>=24.4",
    "asgi-lifespan>=2.1",          # tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secapp"]
