[project]
name = "db-deep"
version = "0.1.0"
description = "A6 — DB 심화 (인덱스/N+1/jsonb/FTS/LISTEN-NOTIFY/zero-downtime 마이그레이션)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",            # Alembic + LISTEN/NOTIFY
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbdeep"]
