[project]
name = "cache-mq-deep"
version = "0.1.0"
description = "A7 — 캐시·메시지 큐 심화 (stampede / Saga / CQRS / Event Sourcing / Schema Registry / DLQ)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "redis>=5.0",
    "orjson>=3.10",
    "jsonschema>=4.23",         # schema registry 데모
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cachemqdeep"]
