[project]
name = "realtime"
version = "0.1.0"
description = "A8 — WebSocket / Server-Sent Events / Redis pub/sub broadcast"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",   # standard 안에 websockets/httptools 포함
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "redis>=5.0",
    "sse-starlette>=2.1",        # SSE 헬퍼 (Starlette 위 EventSourceResponse)
    "structlog>=24.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realtime"]
